@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>org.controlsfx</groupId>
 			<artifactId>controlsfx</artifactId>
-			<version>11.2.1</version>
+			<version>11.1.2</version>
 		</dependency>
 
 		<dependency>
@@ -84,6 +84,15 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>21</source>
+					<target>21</target>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
@@ -101,7 +110,23 @@
 				<version>0.0.8</version>
 				<configuration>
 					<mainClass>br.com.gcmsystem.gcmsystemdesktop.GcmsystemdesktopApplication</mainClass>
+					<options>
+						<option>--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+						<option>--module-path</option>
+						<option>C:/Users/Marcio/Documents/Projects/javafx-sdk-22.0.1/lib</option>
+						<option>--add-modules</option>
+						<option>javafx.controls,javafx.fxml</option>
+					</options>
 				</configuration>
+				<executions>
+					<execution>
+						<id>javafx-run</id>
+						<phase>test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
